--- a/README
+++ b/README
@@ -1,13 +1,14 @@
 Mutant generator for C-like languages
 Jamie Andrews
 May, 2005
+Updates: Rahul Gopinath, April 2016
 
 General comments:
 - There are really two executables:
   - "descmutants", a Prolog program that just generates mutant
     descriptions.  It's a simple filter that is invoked by
-    generateMutants.sh, so you don't have to invoke it directly.
-  - "generateMutants.sh", a shell script that takes the mutant
+    gen.rb, so you don't have to invoke it directly.
+  - "gen.rb", a script that takes the mutant
     descriptions and actually generates the mutant source files.
 - There is a test program for you to generate mutants for,
   "wc.c", a simple word-counting program.
@@ -19,15 +20,10 @@ To compile:
   to figure out the proper incantation to put in the Makefile
   and you might have to make some minor tweaks to the source.
 - Put the SWI-Prolog compiler "pl" on your path.
-- Type "make" and you should get an executable called "descmutants".
-- Put that executable somewhere on your path or just leave it in
-  the directory where you are making the mutants.
+- Type `make` and you should get an executable called "bin/descmutants".
 
 To generate mutants:
-- Make sure that the "descmutants" executable and the
-  "generateMutants.sh" shell script are in your path (or, just
-  in the directory where you are making the mutants).
-- Type "generateMutants.sh <sourcefile>", where <sourcefile> is
+- Type `make gen P=<sourcefile>", where <sourcefile> is
   the name of your program (in a C-like language) that you want
   to generate mutants for.
 
@@ -44,9 +40,3 @@ Caveats:
   automatically!
 - Previous experience indicates that about 10% of the mutants
   are uncompilable and about 10-15% are equivalent.
-
-Good luck and let me know if you have any problems.
-
---Jamie Andrews.
-  andrews    .uwo        } Merge these two lines to obtain my e-mail address.
-         @csd    .ca     }
